fixed styles on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,5 @@
 .linkticket {
-  color: white;
+  color: rgb(255, 255, 255);
   text-decoration: none;
 }
 
